prod_snapshot_2015-09-24_1030/objects/SLA_Performance__c.object
<CustomObject>
    <fields>
        <fullName>Awaiting_OnBoard__c</fullName>
        <label>Awaiting OnBoard</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won__c</fullName>
        <label>Closed Won</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <formula>&quot;v2&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfilled__c</fullName>
        <label>Fulfilled</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Fulfillment__c</fullName>
        <label>In Fulfillment</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <label>Live</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending__c</fullName>
        <label>Pending</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_Live_Date__c</fullName>
        <label>Period Live Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_SLA__c</fullName>
        <label>Product SLA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Sort__c</fullName>
        <formula>CASE( Name ,&quot;PPC&quot;,1,&quot;SEO&quot;,2,&quot;Social&quot;,3,&quot;Maps&quot;,4,&quot;Email&quot;,5,&quot;Template Website&quot;,6,&quot;Custom Website&quot;,7,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Met__c</fullName>
        <formula>IF(In_Fulfillment__c&lt;=(Product_SLA__c*8),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Type__c</fullName>
        <label>Sell Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Summary Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Waiting_On_Approval__c</fullName>
        <label>Waiting On Approval</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiting_On_Resource__c</fullName>
        <label>Waiting On Resource</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>SLA Performance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Summary_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Product_SLA__c</columns>
        <columns>NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Closed_Won__c</columns>
        <columns>Awaiting_OnBoard__c</columns>
        <columns>Waiting_On_Approval__c</columns>
        <columns>Waiting_On_Resource__c</columns>
        <columns>In_Fulfillment__c</columns>
        <columns>Live__c</columns>
        <columns>Fulfilled__c</columns>
        <columns>Report_Sort__c</columns>
        <columns>Period_Live_Date__c</columns>
        <columns>SLA_Met__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Lead Capture Pages</value>
        </filters>
        <label>By Prod Type</label>
    </listViews>
    <listViews>
        <fullName>SpecOppProd</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Summary_Id__c</columns>
        <columns>NAME</columns>
        <columns>Closed_Won__c</columns>
        <columns>Awaiting_OnBoard__c</columns>
        <columns>Waiting_On_Approval__c</columns>
        <columns>Waiting_On_Resource__c</columns>
        <columns>Pending__c</columns>
        <columns>In_Fulfillment__c</columns>
        <columns>Live__c</columns>
        <columns>Fulfilled__c</columns>
        <columns>Report_Sort__c</columns>
        <columns>Period_Live_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Summary_Id__c</field>
            <operation>equals</operation>
            <value>00kF000000RiBN1</value>
        </filters>
        <label>Specific Opp Prod</label>
    </listViews>
    <nameField>
        <label>SLA Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>